# cpp-ftc

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  Doxyfile  README.md
example/: CMakeLists.txt
example/Function/: CMakeLists.txt  SmallFunction.cpp
example/Memory/: CMakeLists.txt
example/Memory/pmr/: PmrUsage.cpp
example/Mixin/: Auxiliary.cpp  CMakeLists.txt  Singleton.cpp
example/String/: CMakeLists.txt  ConstString.cpp
example/Traits/: CMakeLists.txt  FunctionTraits.cpp
example/Utility/: CMakeLists.txt  OverloadSet.cpp  Variadic.cpp
include/: object_behaviour_tester.hpp  static_function.hpp
include/FTC/Container/: LockFreeCircularQueue.hpp
include/FTC/Debug/: LifetimeTester.hpp  ObjBehaviourTester.hpp
include/FTC/Function/: SmallFunction.hpp
include/FTC/Memory/pmr/: ProfileResource.hpp  profile_resource.hpp
include/FTC/Mixin/: Auxiliary.hpp  Singleton.hpp
include/FTC/String/: ConstString.hpp
include/FTC/Traits/: FunctionTraits.hpp
include/FTC/Utility/: Lift.hpp  OverloadSet.hpp  Preprocessor.hpp  Variadic.hpp
include/pmr/: profile_resource.hpp
sample/: CMakeLists.txt  static_function.cpp
sample/Function/: CMakeLists.txt  StaticFunction.cpp
sample/MemoryManagement/: CMakeLists.txt
sample/MemoryManagement/pmr/: PmrUsage.cpp
sample/Template/: CMakeLists.txt  FunctionTraits.cpp  Variadic.cpp
sample/pmr/: pmr_usage.cpp
src/Debug/: ObjBehaviourTester.hpp
src/Function/: StaticFunction.hpp
src/Macros/: Fwd.hpp
src/MemoryManagement/pmr/: profile_resource.hpp
src/Template/: Variadic.hpp
src/Template/Traits/: FunctionTraits.hpp
test/: CMakeLists.txt  static_function.cpp
test/Function/: CMakeLists.txt  SmallFunction.cpp  StaticFunction.cpp
util/: demangle.py
